--- a/views/serial_purchase_order_report.xml
+++ b/views/serial_purchase_order_report.xml
@@ -1,105 +1,224 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-        <template id="serial_purchase_order_report"
+      <template id="serial_purchase_order_report"
 		  inherit_id="purchase.report_purchaseorder_document">
-	  <xpath expr="//table[@class='table table-condensed']//thead//tr//th[1]" position="after">
-	    <th>Reference L</th>
-	  </xpath>
-	  <xpath expr="//table[@class='table table-condensed']//thead//tr//th[2]" position="after">
-	    <th>Reference S</th>
-	  </xpath>
-	  <xpath expr="//tbody/tr/td[1]" position="after">
-	    <td>
-	      <span t-field="line.product_id.default_code"/>
-	    </td>
-	  </xpath>
-	  <xpath expr="//tbody/tr/td[2]" position="after">
-	    <td>
-	      <span t-field="line.product_id.ean13"/>
-	    </td>
-	  </xpath>
-          <xpath expr="//div[@class='oe_structure'][2]" position="after">
-	    <table class="table table-condensed" t-if="not o.picking_ids.pack_operation_ids">
+
+	<t t-call="report.external_layout">
+          <div class="page">
+            <div class="oe_structure"/>
+            <div class="row">
+              <div class="col-xs-6">
+                <strong>Shipping address:</strong>
+                <div t-if="o.dest_address_id">
+                  <div t-field="o.dest_address_id"
+                       t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
+                </div>
+		<div t-if="not o.dest_address_id and o.picking_type_id and o.picking_type_id.warehouse_id">
+                  <span t-field="o.picking_type_id.warehouse_id.name"/>
+                  <div t-field="o.picking_type_id.warehouse_id.partner_id"
+                       t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
+                </div>
+              </div>
+              <div class="col-xs-5 col-xs-offset-1">
+                <div t-field="o.partner_id"
+                     t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
+                <p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat"/></p>
+              </div>
+            </div>
+
+            <h2 t-if="o.state != 'draft'">Purchase Order Confirmation N°<span t-field="o.name"/></h2>
+            <h2 t-if="o.state == 'draft'">Request for Quotation N°<span t-field="o.name"/></h2>
+
+            <div class="row mt32 mb32">
+              <div t-if="o.name" class="col-xs-3">
+                <strong>Our Order Reference:</strong>
+                <p t-field="o.name"/>
+              </div>
+              <div t-if="o.partner_ref" class="col-xs-3">
+                <strong>Your Order Reference</strong>
+                <p t-field="o.partner_ref"/>
+              </div>
+              <div t-if="o.date_order" class="col-xs-3">
+                <strong>Order Date:</strong>
+                <p t-field="o.date_order"/>
+              </div>
+              <div t-if="o.validator" class="col-xs-3">
+                <strong>Validated By:</strong>
+                <p t-field="o.validator"/>
+              </div>
+            </div>
+
+            <table class="table table-condensed">
               <thead>
                 <tr>
-                  <th><strong>Product</strong></th>
-                  <th class="text-right"><strong>Quantity</strong></th>
-                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t>
-                  <th><strong>Barcode</strong></th>
-		  <th><strong>Numéro de Serie</strong></th>
-                  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t>
+                  <th><strong>Description</strong></th>
+                  <th><strong>Taxes</strong></th>
+                  <th class="text-center"><strong>Date Req.</strong></th>
+                  <th class="text-right"><strong>Qty</strong></th>
+                  <th class="text-right"><strong>Unit Price</strong></th>
+                  <th class="text-right"><strong>Net Price</strong></th>
                 </tr>
               </thead>
               <tbody>
-                <tr t-foreach="o.picking_ids.move_lines" t-as="move">
-                  <t t-if="(o.state != 'partially_available') or (move.reserved_availability > 0)">
-                    <td><span t-field="move.product_id"/></td>
-                    <td class="text-right">
-                      <t t-if="o.state == 'partially_available'">
-                        <span t-field="move.reserved_availability"/> <span t-field="move.product_id.uom_id" groups="product.group_uom"/>
-                      </t>
-                      <t t-if="o.state != 'partially_available'">
-                        <span t-field="move.product_uom_qty"/> <span t-field="move.product_uom" groups="product.group_uom"/>
-                      </t>
-                    </td>
-                    <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="move.location_id"/></td></t>
-                    <td>
-                      <span t-if="move.product_id and move.product_id.ean13">
-                        <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)" style="width:300px;height:50px"/>
-                      </span>
-                    </td>
-		    <span t-field="move.lot_ids.name"/>
-                    <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="move.location_dest_id"/></td></t>
-                  </t>
-                </tr>
-              </tbody>
-            </table>
-            <table class="table table-condensed" t-if="o.picking_ids.pack_operation_ids">
-              <thead>
-                <tr>
-                  <th><strong>Product</strong></th>
-                  <th class="text-right"><strong>Quantity</strong></th>
-                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t>
-                  <th><strong>Barcode</strong></th>
-		  <th><strong>Numéro de Serie</strong></th>
-		  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t>
-                </tr>
-              </thead>
-              <tbody>
-                <tr t-foreach="o.picking_ids.pack_operation_ids" t-as="pack_operation">
-                  <td><span t-field="pack_operation.product_id"/>
-                  <t t-if="not pack_operation.product_id and pack_operation.package_id"><span  t-field="pack_operation.package_id"/></t></td>
-                  <td class="text-right"><span t-field="pack_operation.product_qty"/> <span t-field="pack_operation.product_uom_id" groups="product.group_uom"/></td>
-                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="pack_operation.location_id"/>
-                  <span t-if="pack_operation.package_id">:</span>
-                  <span t-field="pack_operation.package_id"/>
-                  <span t-if="pack_operation.lot_id">:</span>
-                  <span t-field="pack_operation.lot_id"/>
-                </td>
-                  </t>
+                <tr t-foreach="o.order_line" t-as="line">
                   <td>
-                    <span t-if="pack_operation.lot_id">
-                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.lot_id.name, 600, 100)" style="width:300px;height:50px"/>
-                    </span>
-                    <span t-if="pack_operation.product_id and not pack_operation.lot_id and pack_operation.product_id.ean13">
-                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', pack_operation.product_id.ean13, 600, 100)" style="width:300px;height:50px"/>
-                    </span>
-                    <span t-if="pack_operation.package_id and not pack_operation.product_id">
-                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.package_id.name, 600, 100)" style="width:300px;height:50px"/>
-                    </span>
+                    <span t-field="line.name"/>
                   </td>
-		  <td>
-		    <span t-field="pack_operation.lot_id.name"/>
-		  </td>
-		  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="pack_operation.location_dest_id"/>
-		  <span t-if="pack_operation.result_package_id">:</span>
-                  <span t-field="pack_operation.result_package_id"/>
-                  </td></t>
+                  <td>
+                    <span t-esc="', '.join(map(lambda x: x.name, line.taxes_id))"/>
+                  </td>
+                  <td class="text-center">
+                    <span t-field="line.date_planned"/>
+                  </td>
+                  <td class="text-right">
+                    <span t-field="line.product_qty"/>
+                    <span t-field="line.product_uom.name" groups="product.group_uom"/>
+                  </td>
+                  <td class="text-right">
+                    <span t-field="line.price_unit"/>
+                  </td>
+                  <td class="text-right">
+                    <span t-field="line.price_subtotal"
+                          t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                  </td>
                 </tr>
               </tbody>
             </table>
-          </xpath>
+
+            <div class="row">
+              <div class="col-xs-4 pull-right">
+                <table class="table table-condensed">
+                  <tr class="border-black">
+                    <td><strong>Total Without Taxes</strong></td>
+                    <td class="text-right">
+                      <span t-field="o.amount_untaxed"
+                            t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Taxes</td>
+                    <td class="text-right">
+                      <span t-field="o.amount_tax"
+                            t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                    </td>
+                  </tr>
+                  <tr class="border-black">
+                    <td><strong>Total</strong></td>
+                    <td class="text-right">
+                      <span t-field="o.amount_total"
+                            t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+
+            <p t-field="o.notes"/>
+            <div class="oe_structure"/>
+          </div>
+	</t>
+      </template>
+
+      <template id="serial_purchase_order_report"
+		inherit_id="purchase.report_purchaseorder_document">
+	<xpath expr="//table[@class='table table-condensed']//thead//tr//th[1]" position="after">
+	  <th>Reference L</th>
+	</xpath>
+	<xpath expr="//table[@class='table table-condensed']//thead//tr//th[2]" position="after">
+	  <th>Reference S</th>
+	</xpath>
+	<xpath expr="//tbody/tr/td[1]" position="after">
+	  <td>
+	    <span t-field="line.product_id.default_code"/>
+	  </td>
+	</xpath>
+	<xpath expr="//tbody/tr/td[2]" position="after">
+	  <td>
+	    <span t-field="line.product_id.ean13"/>
+	  </td>
+	</xpath>
+          <!-- <xpath expr="//div[@class='oe_structure'][2]" position="after"> -->
+	  <!--   <table class="table table-condensed" t-if="not o.picking_ids.pack_operation_ids"> -->
+          <!--     <thead> -->
+          <!--       <tr> -->
+          <!--         <th><strong>Product</strong></th> -->
+          <!--         <th class="text-right"><strong>Quantity</strong></th> -->
+          <!--         <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t> -->
+          <!--         <th><strong>Barcode</strong></th> -->
+	  <!-- 	  <th><strong>Numéro de Serie</strong></th> -->
+          <!--         <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t> -->
+          <!--       </tr> -->
+          <!--     </thead> -->
+          <!--     <tbody> -->
+          <!--       <tr t-foreach="o.picking_ids.move_lines" t-as="move"> -->
+          <!--         <t t-if="(o.state != 'partially_available') or (move.reserved_availability > 0)"> -->
+          <!--           <td><span t-field="move.product_id"/></td> -->
+          <!--           <td class="text-right"> -->
+          <!--             <t t-if="o.state == 'partially_available'"> -->
+          <!--               <span t-field="move.reserved_availability"/> <span t-field="move.product_id.uom_id" groups="product.group_uom"/> -->
+          <!--             </t> -->
+          <!--             <t t-if="o.state != 'partially_available'"> -->
+          <!--               <span t-field="move.product_uom_qty"/> <span t-field="move.product_uom" groups="product.group_uom"/> -->
+          <!--             </t> -->
+          <!--           </td> -->
+          <!--           <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="move.location_id"/></td></t> -->
+          <!--           <td> -->
+          <!--             <span t-if="move.product_id and move.product_id.ean13"> -->
+          <!--               <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)" style="width:300px;height:50px"/> -->
+          <!--             </span> -->
+          <!--           </td> -->
+	  <!-- 	    <span t-field="move.lot_ids.name"/> -->
+          <!--           <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="move.location_dest_id"/></td></t> -->
+          <!--         </t> -->
+          <!--       </tr> -->
+          <!--     </tbody> -->
+          <!--   </table> -->
+          <!--   <table class="table table-condensed" t-if="o.picking_ids.pack_operation_ids"> -->
+          <!--     <thead> -->
+          <!--       <tr> -->
+          <!--         <th><strong>Product</strong></th> -->
+          <!--         <th class="text-right"><strong>Quantity</strong></th> -->
+          <!--         <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t> -->
+          <!--         <th><strong>Barcode</strong></th> -->
+	  <!-- 	  <th><strong>Numéro de Serie</strong></th> -->
+	  <!-- 	  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t> -->
+          <!--       </tr> -->
+          <!--     </thead> -->
+          <!--     <tbody> -->
+          <!--       <tr t-foreach="o.picking_ids.pack_operation_ids" t-as="pack_operation"> -->
+          <!--         <td><span t-field="pack_operation.product_id"/> -->
+          <!--         <t t-if="not pack_operation.product_id and pack_operation.package_id"><span  t-field="pack_operation.package_id"/></t></td> -->
+          <!--         <td class="text-right"><span t-field="pack_operation.product_qty"/> <span t-field="pack_operation.product_uom_id" groups="product.group_uom"/></td> -->
+          <!--         <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="pack_operation.location_id"/> -->
+          <!--         <span t-if="pack_operation.package_id">:</span> -->
+          <!--         <span t-field="pack_operation.package_id"/> -->
+          <!--         <span t-if="pack_operation.lot_id">:</span> -->
+          <!--         <span t-field="pack_operation.lot_id"/> -->
+          <!--       </td> -->
+          <!--         </t> -->
+          <!--         <td> -->
+          <!--           <span t-if="pack_operation.lot_id"> -->
+          <!--             <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.lot_id.name, 600, 100)" style="width:300px;height:50px"/> -->
+          <!--           </span> -->
+          <!--           <span t-if="pack_operation.product_id and not pack_operation.lot_id and pack_operation.product_id.ean13"> -->
+          <!--             <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', pack_operation.product_id.ean13, 600, 100)" style="width:300px;height:50px"/> -->
+          <!--           </span> -->
+          <!--           <span t-if="pack_operation.package_id and not pack_operation.product_id"> -->
+          <!--             <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.package_id.name, 600, 100)" style="width:300px;height:50px"/> -->
+          <!--           </span> -->
+          <!--         </td> -->
+	  <!-- 	  <td> -->
+	  <!-- 	    <span t-field="pack_operation.lot_id.name"/> -->
+	  <!-- 	  </td> -->
+	  <!-- 	  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="pack_operation.location_dest_id"/> -->
+	  <!-- 	  <span t-if="pack_operation.result_package_id">:</span> -->
+          <!--         <span t-field="pack_operation.result_package_id"/> -->
+          <!--         </td></t> -->
+          <!--       </tr> -->
+          <!--     </tbody> -->
+          <!--   </table> -->
+          <!-- </xpath> -->
         </template>
 
     </data>
