--- a/views/serial_quotation_report.xml
+++ b/views/serial_quotation_report.xml
@@ -1,106 +1,285 @@
 <?xml version="1.0"?>
 <openerp>
-    <data>
-        <template id="serial_saleorder_quotation_report"
-		  inherit_id="sale.report_saleorder_document">
-	  <xpath expr="//table[@class='table table-condensed']//thead//tr//th[1]" position="after">
-	    <th>Reference L</th>
-	  </xpath>
-	  <xpath expr="//table[@class='table table-condensed']//thead//tr//th[2]" position="after">
-	    <th>Reference S</th>
-	  </xpath>
-	  <xpath expr="//tbody[@class='sale_tbody']/tr/td[1]" position="after">
-	    <td>
-	      <span t-field="l.product_id.default_code"/>
-	    </td>
-	  </xpath>
-	  <xpath expr="//tbody[@class='sale_tbody']/tr/td[2]" position="after">
-	    <td>
-	      <span t-field="l.product_id.ean13"/>
-	    </td>
-	  </xpath>
-          <xpath expr="//div[@class='oe_structure'][2]" position="after">
-	    <table class="table table-condensed" t-if="not o.picking_ids.pack_operation_ids">
-              <thead>
-                <tr>
-                  <th><strong>Product</strong></th>
-                  <th class="text-right"><strong>Quantity</strong></th>
-                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t>
-                  <th><strong>Barcode</strong></th>
-		  <th><strong>Numéro de Serie</strong></th>
-                  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t>
-                </tr>
-              </thead>
-              <tbody>
-                <tr t-foreach="o.picking_ids.move_lines" t-as="move">
-                  <t t-if="(o.state != 'partially_available') or (move.reserved_availability > 0)">
-                    <td><span t-field="move.product_id"/></td>
-                    <td class="text-right">
-                      <t t-if="o.state == 'partially_available'">
-                        <span t-field="move.reserved_availability"/> <span t-field="move.product_id.uom_id" groups="product.group_uom"/>
-                      </t>
-                      <t t-if="o.state != 'partially_available'">
-                        <span t-field="move.product_uom_qty"/> <span t-field="move.product_uom" groups="product.group_uom"/>
-                      </t>
-                    </td>
-                    <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="move.location_id"/></td></t>
-                    <td>
-                      <span t-if="move.product_id and move.product_id.ean13">
-                        <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)" style="width:300px;height:50px"/>
-                      </span>
-                    </td>
-		    <span t-field="move.lot_ids.name"/>
-                    <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="move.location_dest_id"/></td></t>
-                  </t>
-                </tr>
-              </tbody>
-            </table>
-            <table class="table table-condensed" t-if="o.picking_ids.pack_operation_ids">
-              <thead>
-                <tr>
-                  <th><strong>Product</strong></th>
-                  <th class="text-right"><strong>Quantity</strong></th>
-                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t>
-                  <th><strong>Barcode</strong></th>
-		  <th><strong>Numéro de Serie</strong></th>
-		  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t>
-                </tr>
-              </thead>
-              <tbody>
-                <tr t-foreach="o.picking_ids.pack_operation_ids" t-as="pack_operation">
-                  <td><span t-field="pack_operation.product_id"/>
-                  <t t-if="not pack_operation.product_id and pack_operation.package_id"><span  t-field="pack_operation.package_id"/></t></td>
-                  <td class="text-right"><span t-field="pack_operation.product_qty"/> <span t-field="pack_operation.product_uom_id" groups="product.group_uom"/></td>
-                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="pack_operation.location_id"/>
-                  <span t-if="pack_operation.package_id">:</span>
-                  <span t-field="pack_operation.package_id"/>
-                  <span t-if="pack_operation.lot_id">:</span>
-                  <span t-field="pack_operation.lot_id"/>
-                </td>
-                  </t>
-                  <td>
-                    <span t-if="pack_operation.lot_id">
-                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.lot_id.name, 600, 100)" style="width:300px;height:50px"/>
-                    </span>
-                    <span t-if="pack_operation.product_id and not pack_operation.lot_id and pack_operation.product_id.ean13">
-                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', pack_operation.product_id.ean13, 600, 100)" style="width:300px;height:50px"/>
-                    </span>
-                    <span t-if="pack_operation.package_id and not pack_operation.product_id">
-                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.package_id.name, 600, 100)" style="width:300px;height:50px"/>
-                    </span>
+  <data>
+
+    <template id="serial_saleorder_replace_quotation_report"
+	      inherit_id="sale.report_saleorder_document">
+      <xpath expr="//div[@class='page']" position="replace">
+	<div class="page">
+	  <div class="oe_structure"/>
+          <h2>
+            <span t-if="o.state not in ['draft','sent']">Order N° </span>
+            <span t-if="o.state in ['draft','sent']">Quotation N° </span>
+            <span t-field="o.name"/>
+          </h2>
+
+	  <div t-if="o.date_order" class="col-xs-3">
+            <strong t-if="o.state not in ['draft','sent']">Date Ordered:</strong>
+            <strong t-if="o.state in ['draft','sent']">Quotation Date:</strong>
+            <p t-field="o.date_order"/>
+          </div>
+
+	  <div class="row">
+            <div class="col-xs-2" style="text-align:left">
+              <strong t-if="o.partner_shipping_id == o.partner_invoice_id" style="text-align:left">Invoice and shipping address:</strong>
+              <strong t-if="o.partner_shipping_id != o.partner_invoice_id" style="text-align:left">Invoice address:</strong>
+	      <div t-field="o.partner_invoice_id" style="text-align:left"
+                   t-field-options='{"widget": "contact", "fields": ["address","name", "phone", "fax"], "no_marker": true}'/>
+              <p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat" style="text-align:left"/></p>
+              <div t-if="o.partner_shipping_id != o.partner_invoice_id" style="text-align:left" class="mt8">
+		<strong>Shipping address:</strong>
+		<div t-field="o.partner_shipping_id" style="text-align:left"
+                     t-field-options='{"widget": "contact", "fields": ["address","name", "phone", "fax"], "no_marker": true}'/>
+		<p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat" style="text-align:left"/></p>
+              </div>
+            </div>
+	    <div class="col-xs-5 col-xs-offset-1">
+	      <h2 t-field="o.partner_id.name"/>
+	      <div t-field="o.partner_id"
+                   t-field-options='{"widget": "contact", "fields": ["address"], "no_marker": true}' />
+	    </div>
+	    <div class="col-xs-6 col-xs-offset-6">
+	      <span>RC N°: </span>
+	      <span t-field="o.partner_id.rc" style="text-align:left"/>
+            </div>
+	    <div class="col-xs-6 col-xs-offset-6">
+	      <span>NIF  : </span>
+	      <span t-field="o.partner_id.nif" style="text-align:left"/>
+            </div>
+	    <div class="col-xs-6 col-xs-offset-6">
+	      <span>AI   : </span>
+	      <span t-field="o.partner_id.ai" style="text-align:left"/>
+            </div>
+	    <div class="col-xs-6 col-xs-offset-6">
+	      <span>Ref Client   : </span>
+	      <span t-field="o.partner_id.ref" style="text-align:left"/>
+            </div>
+
+          </div>
+
+          <div class="row mt32 mb32" id="informations">
+            <div t-if="o.client_order_ref" class="col-xs-3">
+              <strong>Your Reference:</strong>
+              <p t-field="o.client_order_ref"/>
+            </div>
+            <div t-if="o.user_id.name" class="col-xs-3">
+              <strong>Salesperson:</strong>
+              <p t-field="o.user_id.name"/>
+            </div>
+            <div t-if="o.payment_term" class="col-xs-3">
+              <strong>Payment Term:</strong>
+              <p t-field="o.payment_term"/>
+            </div>
+          </div>
+
+          <table class="table table-condensed">
+            <thead>
+              <tr>
+		<th>N°</th>
+		<th>Reference L</th>
+      		<th>Reference S</th>
+		<th>Description</th>
+		<th class="text-right">Quantity</th>
+		<th class="text-right">Unit Price</th>
+		<th groups="sale.group_discount_per_so_line">Disc.(%)</th>
+		<th class="text-right">Price</th>
+		<th>Taxes</th>
+	      </tr>
+	    </thead>
+	    <tbody class="sale_tbody">
+	      <t t-set="count" t-value="1"/>
+              <tr t-foreach="o.order_line" t-as="l">
+		<td>
+		  <!-- numéro d'enregistrement commençant par 1 -->
+		  <t t-raw="count"/>
+		</td>
+		<td>
+		  <span t-field="l.product_id.default_code"/>
+		</td>
+     		<td>
+		  <span t-field="l.product_id.ean13"/>
+		</td>
+		<td>
+                  <span t-field="l.name"/>
+		</td>
+		<td class="text-right">
+                  <span t-field="l.product_uom_qty"/>
+                  <span groups="product.group_uom" t-field="l.product_uom"/>
+		</td>
+		<td class="text-right">
+                  <span t-field="l.price_unit"/>
+		</td>
+		<td groups="sale.group_discount_per_so_line">
+                  <span t-field="l.discount"/>
+		</td>
+		<td class="text-right">
+                  <span t-field="l.price_subtotal"
+			t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+		</td>
+		<td>
+                  <span t-esc="', '.join(map(lambda x: x.name, l.tax_id))"/>
+		</td>
+		<t t-set="count" t-value="count+1"/>
+	      </tr>
+            </tbody>
+          </table>
+
+          <div class="row">
+            <div class="col-xs-4 pull-right">
+              <table class="table table-condensed">
+		<tr class="border-black">
+                  <td><strong>Total Without Taxes</strong></td>
+                  <td class="text-right">
+                    <span t-field="o.amount_untaxed"
+                          t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
                   </td>
-		  <td>
-		    <span t-field="pack_operation.lot_id.name"/>
-		  </td>
-		  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="pack_operation.location_dest_id"/>
-		  <span t-if="pack_operation.result_package_id">:</span>
-                  <span t-field="pack_operation.result_package_id"/>
-                  </td></t>
-                </tr>
-              </tbody>
-            </table>
-          </xpath>
-        </template>
+		</tr>
+		<tr>
+                  <td>Taxes</td>
+                  <td class="text-right">
+                    <span t-field="o.amount_tax"
+                          t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                  </td>
+		</tr>
+		<tr class="border-black">
+                  <td><strong>Total</strong></td>
+                  <td class="text-right">
+                    <span t-field="o.amount_total"
+                          t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                  </td>
+		</tr>
+		<div t-if="o.payment_term.note == 'cash'">
+		  <tr>
+                    <td>Timbre</td>
+                    <td class="text-right">
+                      <span t-field="o.amount_timbre"
+                            t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                    </td>
+		  </tr>
+		  <tr class="border-black">
+                    <td><strong>Total Timbre</strong></td>
+                    <td class="text-right">
+                      <span t-field="o.total_timbre"
+                            t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
+                    </td>
+		  </tr>
+		</div>
+              </table>
+            </div>
+          </div>
+
+	  <strong>Arrêtée la présente facture à la somme de:</strong>
+          <p t-field="o.text_amount"/>
+          <p t-field="o.note" />
+          <p t-if="o.payment_term.note">
+            <strong>Payment Term:</strong>
+            <span t-field="o.payment_term.note"/>
+          </p>
+          <div class="oe_structure"/>
+	</div>
+      </xpath>
+    </template>
+
+    <!-- <template id="serial_saleorder_quotation_report" -->
+    <!-- 	      inherit_id="sale.report_saleorder_document"> -->
+    <!--   <xpath expr="//table[@class='table table-condensed']//thead//tr//th[1]" position="after"> -->
+    <!-- 	<th>Reference L</th> -->
+    <!--   </xpath> -->
+    <!--   <xpath expr="//table[@class='table table-condensed']//thead//tr//th[2]" position="after"> -->
+    <!-- 	<th>Reference S</th> -->
+    <!--   </xpath> -->
+    <!--   <xpath expr="//tbody[@class='sale_tbody']//tr//td[1]" position="after"> -->
+    <!-- 	<td> -->
+    <!-- 	  <span t-field="l.product_id.default_code"/> -->
+    <!-- 	</td> -->
+    <!--   </xpath> -->
+    <!--   <xpath expr="//tbody[@class='sale_tbody']//tr///td[2]" position="after"> -->
+    <!-- 	<td> -->
+    <!-- 	  <span t-field="l.product_id.ean13"/> -->
+    <!-- 	</td> -->
+    <!--   </xpath> -->
+    <!-- </template> -->
 
     </data>
 </openerp>
+       <!-- <xpath expr="//div[@class='oe_structure'][2]" position="after"> -->
+      <!--   <table class="table table-condensed" t-if="not o.picking_ids.pack_operation_ids"> -->
+      <!--     <thead> -->
+      <!--       <tr> -->
+      <!--         <th><strong>Product</strong></th> -->
+      <!--         <th class="text-right"><strong>Quantity</strong></th> -->
+      <!--         <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t> -->
+      <!--         <th><strong>Barcode</strong></th> -->
+      <!-- 	  <th><strong>Numéro de Serie</strong></th> -->
+      <!--         <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t> -->
+      <!--       </tr> -->
+      <!--     </thead> -->
+      <!--     <tbody> -->
+      <!--       <tr t-foreach="o.picking_ids.move_lines" t-as="move"> -->
+      <!--         <t t-if="(o.state != 'partially_available') or (move.reserved_availability > 0)"> -->
+      <!--           <td><span t-field="move.product_id"/></td> -->
+      <!--           <td class="text-right"> -->
+      <!--             <t t-if="o.state == 'partially_available'"> -->
+      <!--               <span t-field="move.reserved_availability"/> <span t-field="move.product_id.uom_id" groups="product.group_uom"/> -->
+      <!--             </t> -->
+      <!--             <t t-if="o.state != 'partially_available'"> -->
+      <!--               <span t-field="move.product_uom_qty"/> <span t-field="move.product_uom" groups="product.group_uom"/> -->
+      <!--             </t> -->
+      <!--           </td> -->
+      <!--           <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="move.location_id"/></td></t> -->
+      <!--           <td> -->
+      <!--             <span t-if="move.product_id and move.product_id.ean13"> -->
+      <!--               <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)" style="width:300px;height:50px"/> -->
+      <!--             </span> -->
+      <!--           </td> -->
+      <!-- 	    <span t-field="move.lot_ids.name"/> -->
+      <!--           <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="move.location_dest_id"/></td></t> -->
+      <!--         </t> -->
+      <!--       </tr> -->
+      <!--     </tbody> -->
+      <!--   </table> -->
+      <!--   <table class="table table-condensed" t-if="o.picking_ids.pack_operation_ids"> -->
+      <!--     <thead> -->
+      <!--       <tr> -->
+      <!--         <th><strong>Product</strong></th> -->
+      <!--         <th class="text-right"><strong>Quantity</strong></th> -->
+      <!--         <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t> -->
+      <!--         <th><strong>Barcode</strong></th> -->
+      <!-- 	  <th><strong>Numéro de Serie</strong></th> -->
+      <!-- 	  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t> -->
+      <!--       </tr> -->
+      <!--     </thead> -->
+      <!--     <tbody> -->
+      <!--       <tr t-foreach="o.picking_ids.pack_operation_ids" t-as="pack_operation"> -->
+      <!--         <td><span t-field="pack_operation.product_id"/> -->
+      <!--         <t t-if="not pack_operation.product_id and pack_operation.package_id"><span  t-field="pack_operation.package_id"/></t></td> -->
+      <!--         <td class="text-right"><span t-field="pack_operation.product_qty"/> <span t-field="pack_operation.product_uom_id" groups="product.group_uom"/></td> -->
+      <!--         <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="pack_operation.location_id"/> -->
+      <!--         <span t-if="pack_operation.package_id">:</span> -->
+      <!--         <span t-field="pack_operation.package_id"/> -->
+      <!--         <span t-if="pack_operation.lot_id">:</span> -->
+      <!--         <span t-field="pack_operation.lot_id"/> -->
+      <!--       </td> -->
+      <!--         </t> -->
+      <!--         <td> -->
+      <!--           <span t-if="pack_operation.lot_id"> -->
+      <!--             <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.lot_id.name, 600, 100)" style="width:300px;height:50px"/> -->
+      <!--           </span> -->
+      <!--           <span t-if="pack_operation.product_id and not pack_operation.lot_id and pack_operation.product_id.ean13"> -->
+      <!--             <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', pack_operation.product_id.ean13, 600, 100)" style="width:300px;height:50px"/> -->
+      <!--           </span> -->
+      <!--           <span t-if="pack_operation.package_id and not pack_operation.product_id"> -->
+      <!--             <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.package_id.name, 600, 100)" style="width:300px;height:50px"/> -->
+      <!--           </span> -->
+      <!--         </td> -->
+      <!-- 	  <td> -->
+      <!-- 	    <span t-field="pack_operation.lot_id.name"/> -->
+      <!-- 	  </td> -->
+      <!-- 	  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="pack_operation.location_dest_id"/> -->
+      <!-- 	  <span t-if="pack_operation.result_package_id">:</span> -->
+      <!--         <span t-field="pack_operation.result_package_id"/> -->
+      <!--         </td></t> -->
+      <!--       </tr> -->
+      <!--     </tbody> -->
+      <!--   </table> -->
+      <!-- </xpath> -->
