--- a/views/account_invoice_custum_soulco.xml
+++ b/views/account_invoice_custum_soulco.xml
@@ -23,7 +23,7 @@
 	      <div class="col-xs-6 col-xs-offset-6">
 		<span t-if="o.partner_id.vat">TIN: <span t-field="o.partner_id.vat" style="text-align:left"/></span>
 	      </div>
-	      <div class="col-xs-6 col-xs-offset-6"  style="background-color:#000000;border: 1px solid #000000;color:#000000;">
+	      <div class="col-xs-6 col-xs-offset-6"  style="border: 1px solid #000000;color:#000000;">
 		<h2 t-field="o.partner_id.name" style="text-align:left"/>
 		<address t-field="o.partner_id"
 			 t-field-options='{"widget": "contact", "fields": ["address"], "no_marker": true}' />
@@ -44,7 +44,7 @@
 	      <!-- 	<span>AI   : </span> -->
 	      <!-- 	<span t-field="o.partner_id.ai" style="text-align:left"/> -->
 	      <!-- </div> -->
-	      <div class="col-xs-6 col-xs-offset-6"  style="background-color:#000000;border: 1px solid #000000;color:#000000;">
+	      <div class="col-xs-6 col-xs-offset-6"  style="border: 1px solid #000000;color:#000000;">
 		<span>Ref Client   : </span>
 		<span t-field="o.partner_id.ref" style="text-align:left"/>
 	      </div>
