--- a/views/serial_quotation_report.xml
+++ b/views/serial_quotation_report.xml
@@ -32,14 +32,14 @@
 		<p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat" style="text-align:left"/></p>
               </div>
 	    </div>
-	    <div class="col-xs-5 col-xs-offset-1" style="background-color:#000000;border: 1px solid #000000;color:#000000;">
+	    <div class="col-xs-5 col-xs-offset-1" style="border: 1px solid #000000;color:#000000;">
 	      <h2 t-field="o.partner_id.name"/>
 	      <div t-field="o.partner_id"
                    t-field-options='{"widget": "contact", "fields": ["address"], "no_marker": true}' />
 	      <p>RC N°: <span t-field="o.partner_id.rc" style="text-align:left"/></p>
 	      <p>NIF  : <span t-field="o.partner_id.nif" style="text-align:left"/></p>
 	      <p>AI   : <span t-field="o.partner_id.ai" style="text-align:left"/></p>
-	      <div style="background-color:#000000;border: 1px solid #000000;color:#000000;">
+	      <div style="border: 1px solid #000000;color:#000000;">
 		<span>Ref Client   : </span>
 		<span t-field="o.partner_id.ref" style="text-align:left"/>
 	      </div>
